fix for videoId conversion to lowerCase + skipTurn feature added
